<resources>
    <string name="app_name">EasyPass</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_add_new">Add New</string>
    <string name="nav_stored">Stored</string>
    <string name="overlay_help">scan here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="scan_button">Scan text</string>
    <string name="scan_done">Scan done</string>
    <string name="add_frag_desc">Screen to add new password.</string>
    <string name="inp_app_web">app/web name</string>
    <string name="inp_user_account">user/account</string>
    <string name="inp_password">password</string>
    <string name="btn_add_new_password">Add new Password</string>
    <string name="btn_img_cam">opens camera to scan text for app or site name</string>
    <string name="inp_main_password">Main Password</string>
    <string name="btn_verify">Verify</string>
    <string name="inp_reenter_password">Reenter Password</string>
    <string name="btn_save_password">Save Password</string>
</resources>