<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/add_frag_desc"
    tools:context=".fragments.AddNewFragment">

    <EditText
        android:id="@+id/edit_text_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginStart="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/inp_app_web"
        android:inputType="textAutoComplete"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints="username"
        android:id="@+id/edit_text_acc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/inp_user_account"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_app" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/edit_text_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/inp_password"
        android:inputType="textVisiblePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_acc" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="154dp"
        android:text="@string/btn_add_new_password"
        app:circularflow_defaultRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_pass" />

    <ImageButton
        android:id="@+id/app_cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@+id/btn_img_cam"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_text_app"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/acc_cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@+id/btn_img_cam"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_text_acc"
        app:layout_constraintTop_toBottomOf="@+id/app_cam" />

    <ImageButton
        android:id="@+id/pass_cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="50dp"

        android:contentDescription="@+id/btn_img_cam"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toEndOf="@+id/edit_text_pass"
        app:layout_constraintTop_toBottomOf="@+id/acc_cam" />


</androidx.constraintlayout.widget.ConstraintLayout>